Ajustes de colores y agrega paginas

--- a/THL/index.htm
+++ b/THL/index.htm
@@ -24,8 +24,8 @@
     <script charset="UTF-8" src="js/push/f37a8de88fe04d42db46e49419ca8412_1.js" async=""></script>
 </head>
 
-<body>
-
+<body class="body" onmousemove="myFunction(event)">
+    <div class="cursor"></div>
     <!-- Inner body -->
     <div class="body-inner">
         <div id="artibot-1616847742643"></div>
@@ -79,7 +79,7 @@
                                     <li><a href="index.htm">Home</a></li>
                                     <li><a href="./pages/services.html">Services</a></li>
                                     <li><a href="./pages/contacto.html">Contact</a></li>
-                                    <li><a href="#learnmore" class="ancla">About Us</a></li>
+                                    <li><a href="./pages/about-me.html">About Us</a></li>
                                 </ul>
                             </nav>
                         </div>
@@ -103,7 +103,7 @@
                         <h1 class="m-0" data-animate="fadeInUp" data-animate-delay="600">We are <br>The Hidden <br> London
                             <font color="#0f2123">.</font>
                         </h1>
-                        <h5 class="fuente-banner"><i>A new generation of culture</i></h5>
+                        <h3 class="fuente-banner">A new generation of culture</h3>
                         <div data-animate="fadeInUp" data-animate-delay="900">
                             <button type="button" class="btn btn-rounded btn-reveal btn-reveal-left"><span><a href="#Services">Learn More</a></span><i class="fa fa-arrow-right"></i></button>
                         </div>
@@ -119,8 +119,11 @@
                 <div class="col-lg-8 m-b-100 center">
                     <div class="heading-text heading-section text-center">
                         <h2 style="color: #fff;" id="learnmore">Who we are</h2>
-                        <p style="color: #fff;font-size: 1.5rem;font-weight: 500;">We are London’s fastest growing agency representing talent and brands across the world.</p>
-                        <p style="color: #fff;font-size: 1.5rem;font-weight: 500;">Our aim is to provide a quality service, connecting brands with talent to ensure the best possible outcome for successful campaigns.</p>
+                        <p style="color: #fff;font-size: 1.5rem;font-weight: 500;"> In this new era of digital media, new methods of marketing are needed to evoke responses from consumers. The Hidden London is a UK based marketing, talent and creative production agency with a new gen approach to digital marketing
+                            campaigns.
+                        </p>
+                        <p style="color: #fff;font-size: 1.5rem;font-weight: 500;"> We provide clients with the strategies that help to connect brands to culture. By aiding in influencer selection, and providing creative production, we offer a full in-house service. Our aim is to help brands run successful campaigns
+                            across numerous platforms and to create long lasting partnerships.</p>
                     </div>
                 </div>
             </div>
@@ -129,76 +132,47 @@
         </section>
         <!-- end: Learn more -->
         <!-- More -->
-        <section class="background-grey p-t-120 p-b-120">
+        <section class="background-grey p-t-120 pb-0">
 
-            <div class="container">
+            <div class="container-fluid">
 
-                <div class="col-lg-8 m-b-100 center">
+                <div class="col-lg-12 m-b-100 center">
                     <div class="heading-text heading-section text-center">
-                        <h2 id="wiki">What we focus on</h2>
-                        <p>We work with a vast array of influences and talents from emerging, to high profile. This includes social media influencers, musicians, actors, entertainers and sportsmen’s. We take pride in creating a diverse, jovial community,
-                            brining the best opportunities and representation for clients and</p>
+                        <h2 id="wiki" style="color: #fff;    font-size: 80px;">What we focus on <br><small><strong>C</strong>reativity, <strong>C</strong>onnection, <strong>C</strong>ulture   </small></h2>
+                        <div class="row">
+                            <div class="col-12 col-lg-4">
+                                <h3 style="font-size: 40px;">Creativity</h3>
+                                <p>We stay innovative by keeping creative and forward thinking. Always remaining ‘ahead of the curb’ to influence the latest trends and iconic fashion statements. Curating sets from the ground up, and having the best team
+                                    of photographers and videographers on board means that brands have one less thing to worry about, as we have all the necessary tools needed to execute a vision, whether big or small - the possibilities are endless.</p>
+                            </div>
+                            <div class="col-12 col-lg-4">
+                                <h3 style="font-size: 40px;">Connection</h3>
+                                <p>Focusing on representation and building connections individually and as partnerships is our number one priority as an agency. To create harmonious relationships ensures the best results for successful campaigns and enables
+                                    longevity investments.
+                                </p>
+                                <p>We have established relationships with a network of pioneering talents within an influential culture. This has given us a competitive advantage to create strategic partnerships. We aim to bridge the gap between brands and
+                                    the culture, creating new sustainable connections.</p>
+                            </div>
+                            <div class="col-12 col-lg-4">
+                                <h3 style="font-size: 40px;">Culture</h3>
+                                <p>Having an anthropologist amongst our team ensures a greater understanding in the importance of culture and representation, making sure all cultures feel enriched and not exploited through our marketing and featured campaigns.</p>
+                                <p>We take a holistic approach by combining measurable data with culturally informed human insights to ensure we can communicate better with the target audience. </p>
+                            </div>
+                            <div class="col-12">
+                                <button type="button" class="btn btn-rounded btn-reveal btn-reveal-left"><span>
+                                    <a href="./pages/about-me.html" style="color: #fff;font-size: 1.5rem;">Find out more</a></span><i class="fa fa-arrow-right"></i></button>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
         </section>
         <!-- end: Team -->
         <!-- Our numbers -->
-        <!-- <section class="p-t-200 p-b-100" data-bg-parallax="./images/team.jpg">
-            <div class="container xs-text-center sm-text-center text-light">
-                <div class="bg-overlay"></div>
-                <div class="row">
-                    <div class="col-lg-5">
-                        <div class="heading-text heading-section">
-                            <h2 id="numbers">Our main customers</h2>
-                            <p class="lead">
-                                Every day THL transfers millions in dollars on it's network. We currently have <b>15308</b> non-zero wallets.
-                                <b>6</b> blockchains. <b>591</b> TXs in the past day. Besides that our masternodes receives <b>47533780</b> in fees the past month, there was <b>6504157000</b> in UBX staked and our masternode holders received <b>18.10%</b>                                in staking rewards.
-                            </p>
-                        </div>
-                    </div>
-
-
-                    <div class="col-lg-7">
-                        <div class="row">
-                            <div class="col-lg-6">
-                                <div class="text-center">
-                                    <div class="counter text-lg"> <span data-speed="1000" data-refresh-interval="5" data-to="15000" data-from="0" data-seperator="true"></span> </div>
-                                    <div class="seperator seperator-small"></div>
-                                    <p>Actors</p>
-                                </div>
-                            </div>
-                            <div class="col-lg-6">
-                                <div class="text-center">
-                                    <div class="counter text-lg"> <span data-speed="1500" data-refresh-interval="2" data-to="1800" data-from="0" data-seperator="true"></span> </div>
-                                    <div class="seperator seperator-small"></div>
-                                    <p>Musicians </p>
-                                </div>
-                            </div>
-                            <div class="col-lg-6">
-                                <div class="text-center">
-                                    <div class="counter text-lg"> <span data-speed="300" data-refresh-interval="12" data-to="2000" data-from="0" data-seperator="true"></span> </div>
-                                    <div class="seperator seperator-small"></div>
-                                    <p>Journalists</p>
-                                </div>
-                            </div>
-                            <div class="col-lg-6">
-
-                                <div class="text-center">
-                                    <div class="counter text-lg"> <span data-speed="455" data-refresh-interval="50" data-to="1250" data-from="0" data-seperator="true"></span> </div>
-                                    <div class="seperator seperator-small"></div>
-                                    <p>Writers</p>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </section> -->
         <!-- end: Our numbers -->
 
         <!-- More -->
-        <section class="background-grey p-t-120 p-b-120">
+        <section class="background-grey p-b-120">
 
             <div class="container">
 
@@ -218,60 +192,57 @@
 
                     <!-- Team -->
                     <div class="team-item">
-                        <div class="cotent-img">
+                        <a class="link-item" href="./pages/campaing-strategy.html"></a>
+                        <div class="cotent-img mt-5 mb-5">
 
                             <img src="./images/redes/actors.jpg" alt="Actores">
                         </div>
-                        <span>Actors</span>
+                        <span>CAMPAING STRATEGY</span>
                     </div>
                     <!-- end: Team item-->
 
                     <!-- Team item -->
                     <div class="team-item">
-                        <div class="cotent-img">
+                        <a class="link-item" href="./pages/production_content_creation.html"></a>
+                        <div class="cotent-img mt-5 mb-5">
                             <img src="./images/redes/reporters.jpg" alt="Musicos">
                         </div>
-                        <span>Musicians</span>
+                        <span>PRODUCTION & <br>CONTENT CREATION</span>
                     </div>
                     <!-- end: Team item-->
 
                     <!-- Team item -->
                     <div class="team-item">
-                        <div class="cotent-img">
+                        <a class="link-item" href="./pages/digital_data_marketing.html"></a>
+                        <div class="cotent-img mt-5 mb-5">
 
                             <img src="./images/redes/youtubers.jpg" alt="Youtubers">
                         </div>
-                        <span>Youtubers</span>
+                        <span>DIGITAL DATA & <br> MARKETINGs</span>
                     </div>
 
                     <!-- end: Team item-->
 
                     <!-- Team item -->
                     <div class="team-item">
-                        <div class="cotent-img">
+                        <a class="link-item" href="./pages/brand_talent_relations.html"></a>
+                        <div class="cotent-img mt-5 mb-5">
                             <img src="images/redes/reporteros.jpg" alt="Reporteros">
                         </div>
-                        <span>Reporters</span>
+                        <span>BRAND & <br> TALENT RELATIONS</span>
                     </div>
                     <!-- end: Team item-->
 
                     <!-- Team item -->
                     <div class="team-item">
-                        <div class="cotent-img">
+                        <a class="link-item" href="./pages/legal_compliance.html"></a>
+                        <div class="cotent-img mt-5 mb-5">
                             <img src="images/redes/escritor.jpg" alt="Escritores">
                         </div>
-                        <span>Writers</span>
+                        <span>LEGAL & <br>COMPLIANCE</span>
                     </div>
 
                     <!-- end: Team item-->
-
-                    <!-- Team item -->
-                    <div class="team-item">
-                        <div class="cotent-img">
-                            <img src="images/redes/Stores.jpg" alt="Tiendas">
-                        </div>
-                        <span>Shops</span>
-                    </div>
                 </div>
                 <!-- end: Team item-->
             </div>
