--- a/THL/pages/brand_talent_relations.html
+++ b/THL/pages/brand_talent_relations.html
@@ -25,10 +25,11 @@
             <script charset="UTF-8" src="../js/push/f37a8de88fe04d42db46e49419ca8412_1.js" async=""></script>
 </head>
 
-<body>
+<body onmousemove="myFunction(event)">
+    <div class="cursor"></div>
 
     <!-- Inner body -->
-    <div class="body-inner">
+    <div class="body-inner" onmousemove="myFunction(event)">
         <div id="artibot-1616847742643"></div>
 
         <!-- Top bar-->
@@ -89,7 +90,7 @@
                                         </ul> -->
                                     </li>
                                     <li><a style="color:#314145" href="../pages/contacto.html">Contact</a></li>
-                                    <li><a style="color:#314145" href="../index.htm#learnmore">About Us</a></li>
+                                    <li><a style="color:#314145" href="../pages/about-me.html">About Us</a></li>
                                 </ul>
                             </nav>
                         </div>
@@ -123,34 +124,31 @@
         <!-- Container -->
         <section id="section" class="background-grey">
             <div class="container">
-                <div class="heading-text heading-section">
-                    <!-- <h2 id="ecosystem">Campaing Strategy</h2> -->
-                    <span class="lead">There are people who have a good number of followers, all of them interested in knowing their daily life through a social network, as is the case of Brand & Talent Relations.</span>
-                </div>
-
-                <div class="row">
-                    <div class="col-lg-6 col-12">
-                        <img src="../images/fondos/youtube-destacada.jpg" alt="" class="img-fluid">
-                    </div>
-                    <div class="col-lg-6 col-12">
-                        <p>There are people who have a good number of followers, all of them interested in knowing their daily life through a social network, as is the case of Brand & Talent Relations, which reaches millions of users, transcending borders.</p>
-                        <p>We know that this is your case, which is why THL wants to have you as one of its exclusive clients and that you can take advantage of our vast experience in the management of social networks </p>
-                        <p>and in the updated content that your followers want to find; but committed to respecting the conditions that are important to you, in terms of the management of the same.</p>
-                    </div>
-                </div>
+                <!-- <h2 id="ecosystem">Campaing Strategy</h2> -->
+                <!-- <span class="lead">There are people who have a good number of followers, all of them interested in knowing their daily life through a social network, as is the case of Brand & Talent Relations.</span> -->
             </div>
 
-        </section>
-        <!-- Fin Container -->
-        <!-- Footer -->
-        <footer id="footer">
-            <div class="copyright-content">
-                <div class="container">
-                    <div class="copyright-text text-center">&copy; 2021 The Hidden Londons. All Rights Reserved. <a href="" rel="noopener">Privacy Policy</a></div>
+            <div class="row">
+                <div class="col-lg-6 col-12">
+                    <img src="../images/fondos/youtube-destacada.jpg" alt="" class="img-fluid">
+                </div>
+                <div class="col-lg-6 col-12">
+                    <p><span class="lead">Focusing on representation and building connections individually and as partnerships is our number one priority as an agency. To create harmonious relationships ensures the best results for successful campaigns and enables longevity investments. Working on product gifting, fashion collaborations (brands to talent and brands to brands) helps to reinforce these relationships and keep the connections strong.</span></p>
                 </div>
             </div>
-        </footer>
-        <!-- end: Footer -->
+    </div>
+
+    </section>
+    <!-- Fin Container -->
+    <!-- Footer -->
+    <footer id="footer">
+        <div class="copyright-content">
+            <div class="container">
+                <div class="copyright-text text-center">&copy; 2021 The Hidden Londons. All Rights Reserved. <a href="" rel="noopener">Privacy Policy</a></div>
+            </div>
+        </div>
+    </footer>
+    <!-- end: Footer -->
 
     </div>
 
