--- a/THL/pages/production_content_creation.html
+++ b/THL/pages/production_content_creation.html
@@ -25,7 +25,8 @@
             <script charset="UTF-8" src="../js/push/f37a8de88fe04d42db46e49419ca8412_1.js" async=""></script>
 </head>
 
-<body>
+<body onmousemove="myFunction(event)">
+    <div class="cursor"></div>
 
     <!-- Inner body -->
     <div class="body-inner">
@@ -89,7 +90,7 @@
                                         </ul> -->
                                     </li>
                                     <li><a style="color:#314145" href="../pages/contacto.html">Contact</a></li>
-                                    <li><a style="color:#314145" href="../index.htm#learnmore">About Us</a></li>
+                                    <li><a style="color:#314145" href="../pages/about-me.html">About Us</a></li>
                                 </ul>
                             </nav>
                         </div>
@@ -125,7 +126,7 @@
             <div class="container">
                 <div class="heading-text heading-section">
                     <!-- <h2 id="ecosystem">Campaing Strategy</h2> -->
-                    <span class="lead">There are people who have a good number of followers, all of them interested in knowing their daily life through a social network, as is the case of Production & Content Creation.</span>
+                    <!-- <span class="lead">There are people who have a good number of followers, all of them interested in knowing their daily life through a social network, as is the case of Production & Content Creation.</span> -->
                 </div>
 
                 <div class="row">
@@ -133,9 +134,7 @@
                         <img src="../images/fondos/facebook-destacada.jpg" alt="" class="img-fluid">
                     </div>
                     <div class="col-lg-6 col-12">
-                        <p>There are people who have a good number of followers, all of them interested in knowing their daily life through a social network, as is the case of Production & Content Creation, which reaches millions of users, transcending borders.</p>
-                        <p>We know that this is your case, which is why THL wants to have you as one of its exclusive clients and that you can take advantage of our vast experience in the management of social networks </p>
-                        <p>and in the updated content that your followers want to find; but committed to respecting the conditions that are important to you, in terms of the management of the same.</p>
+                        <p><span class="lead">We stay innovative by keeping creative and forward thinking. Always remaining ‘ahead of the curb’ to influence the latest trends and iconic fashion statements. Curating sets from the ground up, and having the best team of content/ creative directors, graphic designers, animators, photographers, videographers, editors and stylists on board means that brands have one less thing to worry about, as we have all the necessary tools needed to execute a vision, whether big or small - the possibilities are endless.</span></p>
                     </div>
                 </div>
             </div>
