--- a/THL/pages/services.html
+++ b/THL/pages/services.html
@@ -27,14 +27,18 @@
             margin-top: -27px;
         }
         
+        .sticky-active #logo {
+            margin-top: 0;
+        }
+        
         .submenu-light .header-inner #logo a.content-logo {
             background-image: url(../images/02.png);
         }
     </style>
 </head>
 
-<body>
-
+<body onmousemove="myFunction(event)">
+    <div class="cursor"></div>
     <!-- Inner body -->
     <div class="body-inner">
         <div id="artibot-1616847742643"></div>
@@ -97,7 +101,7 @@
                                         </ul> -->
                                     </li>
                                     <li><a style="color:#314145" href="../pages/contacto.html">Contact</a></li>
-                                    <li><a style="color:#314145" href="../index.htm#learnmore">About Us</a></li>
+                                    <li><a style="color:#314145" href="../pages/about-me.html">About Us</a></li>
                                 </ul>
                             </nav>
                         </div>
@@ -109,47 +113,50 @@
         <!-- Container -->
         <!-- Our Ecosystem -->
         <section id="Services" class="p-t-200 p-b-200 background-grey">
-            <div class="container">
+            <div class="container-fluid">
                 <div class="row">
-                    <div class="col-12 col-lg-6">
+                    <div class="col-12 col-lg-1"></div>
+                    <div class="col-12 col-lg-5">
                         <div class="row">
                             <div class="col-12 mb-5">
                                 <a href="./campaing-strategy.html" class="mouse_hover" data-imagen="box-instagram">
-                                    <span class="url">/campaing-strategy</span>
-                                    <h2 class="">Campaing Strategy</h2>
+                                    <span class="url">/CAMPAING-STRATEGY</span>
+                                    <h2 class="">CAMPAING STRATEGY</h2>
                                 </a>
                             </div>
                             <div class="col-12 mb-5">
                                 <a href="./production_content_creation.html" class="mouse_hover" data-imagen="box-facebook">
-                                    <span class="url">/production_content_creation</span>
-                                    <h2 class="">Production & Content Creation</h2>
+                                    <span class="url">/PRODUCTION_CONTENT_CREATION</span>
+                                    <h2 class="">PRODUCTION & CONTENT CREATION</h2>
                                 </a>
                             </div>
                             <div class="col-12 mb-5">
                                 <a href="./digital_data_marketing.html" class="mouse_hover" data-imagen="box-twitter">
-                                    <span class="url">/digital_data_marketing</span>
-                                    <h2 class="">Digital Data & Marketing</h2>
+                                    <span class="url">/DIGITAL_DATA_MARKETING</span>
+                                    <h2 class="">DIGITAL DATA & MARKETING</h2>
                                 </a>
                             </div>
                             <div class="col-12 mb-5">
                                 <a href="./brand_talent_relations.html" class="mouse_hover" data-imagen="box-youtube">
-                                    <span class="url">/brand_talent_relations</span>
-                                    <h2 class="">Brand & Talent Relations</h2>
+                                    <span class="url">/BRAND_TALENT_RELATIONS</span>
+                                    <h2 class="">BRAND & TALENT RELATIONS</h2>
                                 </a>
                             </div>
                             <div class="col-12 mb-5">
                                 <a href="./legal_compliance.html" class="mouse_hover" data-imagen="box-soudcould">
-                                    <span class="url">/legal_compliance</span>
-                                    <h2 class="">Legal & Compliance</h2>
+                                    <span class="url">/LEGAL_COMPLIANCE</span>
+                                    <h2 class="">LEGAL & COMPLIANCE</h2>
                                 </a>
                             </div>
                         </div>
                     </div>
-                    <div class="col-12 col-lg-6">
+                    <div class="col-12 col-lg-5">
                         <a href="" id="url">
                             <img class="animate__animated animate__bounceInUp img-fluid w-100" src="" id="imeg" alt="">
                         </a>
                     </div>
+
+                    <div class="col-12 col-lg-1"></div>
                 </div>
             </div>
         </section>
