--- a/THL/pages/campaing-strategy.html
+++ b/THL/pages/campaing-strategy.html
@@ -24,7 +24,8 @@
     <script charset="UTF-8" src="../js/push/f37a8de88fe04d42db46e49419ca8412_1.js" async=""></script>
 </head>
 
-<body>
+<body onmousemove="myFunction(event)">
+    <div class="cursor"></div>
 
     <!-- Inner body -->
     <div class="body-inner">
@@ -88,7 +89,7 @@
                                         </ul> -->
                                     </li>
                                     <li><a style="color:#314145" href="../pages/contacto.html">Contact</a></li>
-                                    <li><a style="color:#314145" href="../index.htm#learnmore">About Us</a></li>
+                                    <li><a style="color:#314145" href="../pages/about-me.html">About Us</a></li>
                                 </ul>
                             </nav>
                         </div>
@@ -124,7 +125,7 @@
             <div class="container">
                 <div class="heading-text heading-section">
                     <!-- <h2 id="ecosystem">Campaing Strategy</h2> -->
-                    <span class="lead">There are people who have a good number of followers, all of them interested in knowing their daily life through a social network, as is the case of Campaing Strategy.</span>
+                    <!-- <span class="lead">There are people who have a good number of followers, all of them interested in knowing their daily life through a social network, as is the case of Campaing Strategy.</span> -->
                 </div>
 
                 <div class="row">
@@ -132,9 +133,10 @@
                         <img src="../images/fondos/intagram-destacada.jpg" alt="" class="img-fluid">
                     </div>
                     <div class="col-lg-6 col-12">
-                        <p>There are people who have a good number of followers, all of them interested in knowing their daily life through a social network, as is the case of Campaing Strategy, which reaches millions of users, transcending borders.</p>
-                        <p>We know that this is your case, which is why THL wants to have you as one of its exclusive clients and that you can take advantage of our vast experience in the management of social networks </p>
-                        <p>and in the updated content that your followers want to find; but committed to respecting the conditions that are important to you, in terms of the management of the same.</p>
+                        <p><span class="lead">
+                            We undertake extensive research that enables us to create a tailor made strategy that is unique and specific to brands. Carefully choosing the most fitting representation.</span>
+                        </p>
+                        <p><span class="lead">From our extensive roster of influencers and talent, then combining this with our vast access to creative production brings forth innovative ideas including; curating immersive experiences, product placements, event hosting, digital content creation plus much more.</span></p>
                     </div>
                 </div>
             </div>
