--- a/THL/pages/general_equires.html
+++ b/THL/pages/general_equires.html
@@ -24,7 +24,8 @@
     <script charset="UTF-8" src="../js/push/f37a8de88fe04d42db46e49419ca8412_1.js" async=""></script>
 </head>
 
-<body>
+<body onmousemove="myFunction(event)">
+    <div class="cursor"></div>
 
     <!-- Inner body -->
     <div class="body-inner">
@@ -87,7 +88,7 @@
                                         </ul> -->
                                     </li>
                                     <li><a style="color:#314145" href="../pages/contacto.html">Contact</a></li>
-                                    <li><a style="color:#314145" href="../index.htm#learnmore">About Us</a></li>
+                                    <li><a style="color:#314145" href="../pages/about-me.html">About Us</a></li>
                                 </ul>
                             </nav>
                         </div>
