--- a/THL/index.htm
+++ b/THL/index.htm
@@ -22,6 +22,9 @@
     <link rel="canonical" href="index.htm">
 
     <script charset="UTF-8" src="js/push/f37a8de88fe04d42db46e49419ca8412_1.js" async=""></script>
+    <style>
+
+    </style>
 </head>
 
 <body class="body" onmousemove="myFunction(event)">
@@ -90,10 +93,10 @@
         </header>
 
         <!-- Slider -->
-        <div id="slider" class="inspiro-slider slider-fullscreen dots-creative" data-height-xs="360">
+        <div id="slider" class="inspiro-slider slider-fullscreen dots-creative" data-height-xs="360" data-bg-video="./video/videoHom.mp4">
             <!-- Slide 1 -->
-            <div class="slide kenburns" data-bg-video="./video/videoHom.mp4">
-                <div class="bg-overlay"></div>
+            <div class="slide kenburns">
+                <!-- <div class="bg-overlay"></div> -->
                 <div class="container">
                     <div class="slide-captions text-light">
                         <!-- Captions -->
@@ -114,7 +117,7 @@
             <!-- end: Slide 1 -->
         </div>
         <!-- Learn more -->
-        <section class="p-t-120" data-bg-video="./video/aboutMe.mp4">
+        <section class="p-t-120 whi_we_are" data-bg-video="./video/aboutMe.mp4">
             <div class="container">
                 <div class="col-lg-8 m-b-100 center">
                     <div class="heading-text heading-section text-center">
