--- a/THL/pages/about-me.html
+++ b/THL/pages/about-me.html
@@ -48,6 +48,21 @@
             background-color: rgba(0, 0, 0, 0.3);
         }
         
+        @media (max-width:780px) {
+            #Services::before,
+            body::before {
+                content: "";
+                position: absolute;
+                left: 0;
+                right: 0;
+                top: 0;
+                bottom: 0;
+                width: 100%;
+                height: 95.2%;
+                background-color: rgba(0, 0, 0, 0.3);
+            }
+        }
+        
         #slider,
         #Services {
             background: transparent !important;
@@ -99,7 +114,7 @@
                 <div class="container">
                     <!--Logo-->
                     <div id="logo">
-                        <a href="../index.html" class="content-logo">
+                        <a href="../index.htm" class="content-logo">
                             <!-- <img class="img-ligth img-general" src="../images/01.png" alt=""> -->
                         </a>
                     </div>
