--- a/THL/pages/services.html
+++ b/THL/pages/services.html
@@ -34,6 +34,21 @@
         .submenu-light .header-inner #logo a.content-logo {
             background-image: url(../images/02.png);
         }
+        
+        .lines,
+        .lines:before,
+        .lines:after {
+            background-color: #111 !important;
+        }
+        
+        @media (max-width: 780px) {
+            .content-logo {
+                height: 81px;
+                display: inline-block;
+                width: 168px;
+                margin-top: 0;
+            }
+        }
     </style>
 </head>
 
@@ -73,7 +88,7 @@
                 <div class="container">
                     <!--Logo-->
                     <div id="logo">
-                        <a href="../index.html" class="content-logo">
+                        <a href="../index.htm" class="content-logo">
                             <!-- <img class="img-ligth img-general" src="../images/01.png" alt=""> -->
                         </a>
                     </div>
