--- a/THL/index.htm
+++ b/THL/index.htm
@@ -28,7 +28,9 @@
 </head>
 
 <body class="body" onmousemove="myFunction(event)">
-    <div class="cursor"></div>
+    <div class="cursor">
+        <!-- <img src="./images/favicon.png" alt=""> -->
+    </div>
     <!-- Inner body -->
     <div class="body-inner">
         <div id="artibot-1616847742643"></div>
